--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <img id="pic" src="https://www.diariodesevilla.es/2023/06/26/sociedad/Jeff-The-Killer_1805829784_187719838_1200x675.png">
+  <img id="pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/SNice.svg/1200px-SNice.svg.png">
   
 
   <script>
@@ -32,7 +32,7 @@
     
     let wallpaper = document.getElementById("wallpaper")
     let pic = document.getElementById("pic")
-    let audio = new Audio('/scream.mp3');
+    //let audio = new Audio('/scream.mp3');
 
     const dontlog = urlParams.get('log')
     const customName = urlParams.get('nombre')
